<resources>
    <string name="app_name">MVVMNewsApp</string>
    <string name="nothing_here_now">Nothing here now…</string>
    <string name="breaking_news">Breaking News</string>
    <string name="saved_news">Saved News</string>
    <string name="search_news">Search News</string>
    <string name="fab">fab</string>
    <string name="source">SOURCE</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="published_at">PUBLISHED AT</string>
    <string name="news_image">News image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="news_app">News App</string>
    <string name="dont_have_account_yet">Don\'t have an account yet?</string>
    <string name="search">Search...</string>
</resources>
